Version 0.9.7-git
- reminder for sender ID priority: Default sender ID->Module sender ID->SMS sender ID (anton)

Version 0.9.6 - 120328
- MAJOR: move SMS sender ID logic in sendsms() and it hooks to sendsms_get_sender() (anton)
- MAJOR: all 'mobile' terms that are related to sending SMS are replaced by 'sender' (anton)
- MAJOR: all old 'sender' terms that are related to sending SMS are replaced by 'footer' (anton)
- add new language Catalan (ca_ES) (aseques)
- add new language Spanish (es_VE) (alfredo)
- add new function: sendsms_get_sender() to get effective SMS Sender ID (anton)
- add new options in preferences: sender and footer (anton)
- add new plugin: message template, replace word templates with phonebook related data (anton)
- add new plugin: send SMS by uploading a list in a CSV file (anton)
- add new plugin: inbox group (anton)
- add new theme 'play' (ajiwo)
- add new option for user to select active language (aseques)
- add new option for admin to select default language (aseques)
- add gpname2gpid() in simplephonebook/fn.php (emmanuel)
- add webservices type of action (ta=cr) to get user's credit (anton)
- remove address and country from required field on user management (anton)
- remove mobile field from required field on user preferences and management (anton)
- regression: remove addslashes in sendsms() and add stripslashes when fwd to email (anton)
- replace $sms_datetime in several plugins to $datetime_now (anton)
- replace term 'Receiver' with 'To' (anton)
- replace term 'Sender' with 'From' (anton)
- sendsms() is considered low level, use sendsms_pv() on plugins (anton)
- update FAQ, reformat and fix typos (anton)
- update Clickatell's doc (aseques)
- update Clickatell's API URL to HTTPS (aseques)
- fix .po and .mo files, remove duplicated strings and add charset info (aseques)
- fix SMS footer display on user and all outgoing page (anton)
- fix gateway msgtoolbox, unable to properly save message ID on incoming SMS (anton)