@@ -70,6 +70,7 @@ Eugene Trotsan (eugene)
 Helge Larsen
 Jeremy Mueller (jeremymueller)
 Joan (aseques)
+Lucas Teixeira (lucastx)
 Stephane Rosa (srosa)
 T.K Thapa (thapa)
 Wahyu HP (kendokar)
