@@ -1,5 +1,6 @@
 Version 0.9.7-git
 - reminder for sender ID priority: Default sender ID->Module sender ID->SMS sender ID (anton)
+- add bind_textdomain_codeset after bindtextdomain seems to fix the question mark issue (lucastx)
 
 Version 0.9.6 - 120328
 - MAJOR: move SMS sender ID logic in sendsms() and it hooks to sendsms_get_sender() (anton)
